--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,10 @@
     /* overflow: auto !important;     */
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: var(--azul-pokemon);
     color: #070707;
@@ -207,6 +211,35 @@ header.header-pokeapi {
         background: red;
         border: 6px solid;
         box-shadow: inset -4px 6px 12px 2px #300;
+    }
+}
+
+.scrolled .anchor-top {
+    opacity: 1;
+    pointer-events: all;
+    visibility: visible;
+    transition: opacity 400ms ease-in-out, visibility 400ms ease-in-out;
+}
+
+.anchor-top {
+    opacity: 0;
+    right: 30px;
+    bottom: 30px;
+    width: 110px;
+    color: black;
+    height: 110px;
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    pointer-events: none;
+    transform: scale(0.8);
+    transition: opacity 200ms linear, visibility 200ms linear;
+    .loader {
+        margin: 0;
+        left: auto;
+        bottom: auto;
+        display: block;
+        position: relative;
     }
 }
 
