--- a/css/btn-colors.css
+++ b/css/btn-colors.css
@@ -94,7 +94,7 @@
     color: var(--text-black);
 }
 
-.especial, .generaciones {
+.especial, .generaciones, vistos {
     /* background-color: transparent; */
     filter: grayscale(00%);
     border: 2px solid #fff;
@@ -111,4 +111,9 @@
 
 .activeX {
     filter: drop-shadow(0 0 8px #ff3a, 0 0 16px #f50);
+}
+
+/*ataque-defensa card*/
+.habilidad {
+    text-shadow: 0 0 8px #ddc;
 }
